I think I finally solved the css responsiveness issues we've been facing. I set the width to be 35rem but the max-width to be 100% of the container. This means that it will be the size I want it to be until the container gets too small

--- a/client/src/styling/style.css
+++ b/client/src/styling/style.css
@@ -37,6 +37,7 @@ GENERAL COMPONENTS
   transform: translate(-50%, -50%);
   margin: auto;
   width: 35rem;
+  max-width: 100%;
   height: auto;
   padding: 1.2rem;
   border-radius: 1.2rem;
